--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <!--- /Header --->
 
     <!--- promo --->
+         <main>
             <section class="promo">
                 <div class="container">
                     <div class="promo-wrapper">
@@ -111,6 +112,7 @@
                 </div>
                 </div>
              </section>
+          </main>
     <!--- /season-tickets --->  
 
     <!--- Footer --->
