--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <!--- promo --->
             <section class="promo">
-                <div class="container">
+                <div class="container"><div class="new-tag">Новое</div>
                     <div class="promo-wrapper">
                         <div class="promo-logo theme-button"><a href="#"><img src="img/promo-logo.svg" width="55" height="55" alt="Сменить тему" title="Сменить тему"></a></div>
                         <div class="promo-title"><a class="sponsor" href="#" title="Перейти на сайт рекламодателя"><h2>Подводный отель</h2></a></div>
